tests/ui/parser/trailing_dot.stderr
error: empty rational
  --> ROOT/tests/ui/parser/trailing_dot.sol:LL:CC
   |
LL | uint256 constant a = 2 + 2.;
   |                          ^^

error: aborting due to 1 previous error

